2005-01-21  Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwmem-check.c: added backtrace support. w/o backtrace is this
      module really hard to use.
      [Msg-Id: csodge$rfm$1@sea.gmane.org>]

2005-01-20  Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed segfault and compiler warnings on a x86_64 (Intel Xeon).
    * gw/smsc/smsc_at.c: fixed compiler warnings on a 64bite OS.
      Thanks to Ilan Aelion <ilan.aelion at dimoco.at>.
      [Msg-Id: <200412311337.12104.ilan.aelion@dimoco.at>]

2005-01-19  Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed bug #178 and similar bugs.
      Additionaly fixed indentation.
      Thanks to sradman for bug report.

2005-01-19  Alexander Malysh <amalysh at kannel.org>
    * Makefile.in: fixed bug #173.
      Thanks to joergent.

2004-12-23  Alexander Malysh <amalysh at kannel.org>
    * contrib/kannel-monitor/index.php: and yet another one-liner.
      Fixed a case when there is a bearerbox attached and no smsbox's
      attached to it, the bearerbox doesn't appear in the Box Connections.
      This is due to the test being an empty() test with a few spaces
      in the variable $x... Doing a trim solved this..
      Thanks to Bill Brigden <bill at baghead.co.uk>.
      [Msg-Id: <200412231224.iBNCOU008238@bill.aqvs.co.uk>]

2004-12-23  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: applied 'http client timeouts part1 (v4)' patch.
      This patch fixes a problem with dead connections in http client
      connection pool. It's only a first part of fixes that we need
      (we still need to kill inactive connection after timeout expired).
      How it works:
      1) before putting connection into connection pool register dummy callback
      2) if dummy callback called (we will receive error poll event) check if
         connection still ok and if not destroy it
      3) before return connection from pool, unregister dummy callback
